--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "sass": "^1.86.3",
+    "sass-embedded": "^1.86.3",
+    "sass-loader": "^16.0.5"
   }
 }
