--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
@@ -17,8 +18,12 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/test-utils": "^2.4.1",
+    "jsdom": "^24.0.0",
     "sass": "^1.86.3",
     "sass-embedded": "^1.86.3",
-    "sass-loader": "^16.0.5"
+    "sass-loader": "^16.0.5",
+    "vitest": "^1.5.2"
   }
 }
